fix(ui): ui fixes for team details row and pokemon moves on mobile

--- a/ui/src/app/shared/components/pokemon/pokemon-card/pokemon-card.component.scss
+++ b/ui/src/app/shared/components/pokemon/pokemon-card/pokemon-card.component.scss
@@ -286,7 +286,7 @@ $padding: 0.2em;
   .profile
   {
     display: grid;
-    grid-template-columns: 40% 40%;
+    grid-template-columns: 45% 45%;
     justify-content: space-between;
     height: fit-content;
     padding-bottom: 0.2em;
@@ -297,10 +297,12 @@ $padding: 0.2em;
     height: fit-content;
     display: grid;
     grid-template-columns: repeat(2, 50%);
-    grid-template-rows: repeat(2, 50%);
+    grid-template-rows: none;
     gap: 0.2em;
+    row-gap: 0.4em;
     grid-column: 1 / 3;
     align-items: center;
+    min-height: $moveHeight;
   }  
 
   .left
@@ -321,6 +323,7 @@ $padding: 0.2em;
   .move
   {
     position: static;
+    min-height: 2.4em;
   }
 
   .poke-tooltip-wrapper
